[core] jdk 19로 변공